# bug-sprint

./: .gitignore  README.md  README.txt
Bug Sprint.xcodeproj/: project.pbxproj
Bug Sprint.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Bug Sprint.xcodeproj/xcshareddata/xcschemes/: Bug Sprint.xcscheme  Unit Tests.xcscheme
Bug Sprint/Assets/: Launch Screen.storyboard  Main.storyboard
Bug Sprint/Source/: AppDelegate.swift  ViewController.swift
Bug Sprint/Source/Android Layer/: CoreAdapter.cpp  CoreAdapter.h  Main.cpp  OpenGLES.h  SystemUtils.cpp  SystemUtils.h
Bug Sprint/Source/Game/: Camera.cpp  Camera.h  CarScene.cpp  CarScene.h  Core.cpp  Core.h  Drawable.cpp  Drawable.h  Instance.cpp  Instance.h  Light.cpp  Light.h  TestScene.cpp  TestScene.h
Bug Sprint/Source/Game/Things/: Bug.cpp  Bug.h  Car.cpp  Car.h
Bug Sprint/Source/Graphics Utils/: Color.cpp  Color.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Model.cpp  Model.h  RenderPass.cpp  RenderPass.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  ShadowPass.cpp  ShadowPass.h  Texture.cpp  Texture.h
Bug Sprint/Source/Graphics Utils/2D/: Button.cpp  Button.h  DebugSprite.cpp  DebugSprite.h  Drawable2D.cpp  Drawable2D.h  Instance2D.cpp  Instance2D.h  Label.cpp  Label.h  RenderPass2D.cpp  RenderPass2D.h  Sprite.cpp  Sprite.h
Bug Sprint/Source/Graphics Utils/3D/: Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  Instance.cpp  Instance.h  Instance3D.cpp  Instance3D.h  Light.cpp  Light.h  Model.cpp  Model.h  ShadedRenderPass.cpp  ShadedRenderPass.h  ShadowRenderPass.cpp  ShadowRenderPass.h  SkyboxRenderPass.cpp  SkyboxRenderPass.h
Bug Sprint/Source/Shaders/: debugShader2D.fsh  default.fsh  default.vsh  defaultPerFragment.fsh  defaultPerFragment.vsh  defaultShadedPerFragment.vsh  shaderBloom.fsh  shaderBloom.vsh  shaderShaded.fsh  shaderShaded.vsh  shaderShadedComplex.fsh  shaderShadedComplex.vsh  shaderShadow.fsh  shaderShadow.vsh  shaderSkybox.fsh  shaderSkybox.vsh  skybox.vsh  sprite.fsh  sprite.vsh  textured.fsh  textured.vsh
Bug Sprint/Source/Utils/: Color.h  File.cpp  File.h  FileBuffer.cpp  FileBuffer.h  Matrix.cpp  Matrix.h  OpenGLES.h  Shader.cpp  Shader.h  ShaderProgram.h  Types.h  Vector.cpp  Vector.h
Bug Sprint/Source/iOS Layer/: AppDelegate.swift  Bridging-Header.h  CoreAdapter.h  CoreAdapter.mm  Main.storyboard  MainViewController.swift  OpenGLES.h  SystemUtils.h  SystemUtils.mm
Bug Sprint/Supporting Files/: Info.plist
Bug Sprint/Unit Tests/Assets/: broken_fragment.fsh  broken_vertex.vsh  fragment.fsh  test.txt  vertex.vsh
Bug Sprint/Unit Tests/Source/: ColorTests.cpp  FileTests.cpp  ImageTests.cpp  Instance3DTests.cpp  InstanceTests.cpp  MatrixTests.cpp  ModelTests.cpp  SceneTests.cpp  ShaderProgramTests.cpp  ShaderTests.cpp  VectorTests.cpp
bug-sprint/app/: build.gradle
bug-sprint/app/src/main/: AndroidManifest.xml
bug-sprint/app/src/main/assets/: Fonts  Game  Shaders  default_fragment.fsh  default_vertex.vsh
bug-sprint/app/src/main/cpp/: CMakeLists.txt
bug-sprint/app/src/main/res/values/: strings.xml
bug-sprint/gradle/wrapper/: gradle-wrapper.properties
